--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.5",
+    "axios": "^1.2.0",
+    "embla-carousel-autoplay": "^7.0.5",
+    "moment": "^2.29.4",
+    "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.9.0",
+    "@mantine/core": "^5.9.0",
+    "@mantine/hooks": "^5.9.0",
+    "@mantine/next": "^5.9.0",
+    "autoprefixer": "^10.4.13",
+    "embla-carousel-react": "^7.0.5",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5"
+    "eslint-config-next": "13.0.5",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
