--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.5",
     "axios": "^1.2.0",
     "embla-carousel-autoplay": "^7.0.5",
     "moment": "^2.29.4",
